2008-10-01 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/*, fedora/10-dfu-programmer.fdi: Change the
	  parameters to use a struct instead of passing the usb
	  information as separate parameters.  Additionally
	  cleaned up some of the code to make the way for AVR32
	  support & added very basic identification support.

2008-09-26 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, AUTHORS: Fixed PID values for the
	  at90usb82 and at90usb182 chips based on Peter's findings.

2008-09-13 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* fedora/dfu-programmer.spec.in,
	  fedora/10-dfu-programmer.fdi: Fixed the broken HAL rules.

2008-09-10 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, atmel.c, atmel.h
	  commands.c, commands.h, dfu-bool.h, dfu.c, dfu.h
	  main.c: Changed to using dfu_bool & stdint.h values.
	* configure.ac: Removed dependency on stdbool.h.

2008-08-29 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* fedora/dfu-programmer.spec.in,
	  fedora/99-dfu-programmer.rules,
	  fedora/10-dfu-programmer.fdi,
	  fedora/dfu-programmer-at90usb.perms,
	  fedora/dfu-programmer-at89c51.perms: Changed the permission
	  handling code to be based on HAL instead of PAM to keep up
	  with Fedora 9+ releases.
	* configure.ac: Incremented the release number
	* NEWS: Updated the latest news about the 0.4.6 release

2008-08-20 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>
	* src/arguments.c, AUTHORS: Apply the patch Sean D'Epagnier
	  sent to enable 4K bootloaders.
	* fedora/dfu-programmer.spec.in, configure.ac:
	  Incremented the release number
	* NEWS: Updated the latest news about the 0.4.5 release

2008-07-22 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>
	* src/arguments.c, AUTHORS: Apply the patch Sean D'Epagnier
	  sent to fix eeprom flashing.

2008-05-22 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>
	* docs/dfu-programmer.1, src/arguments.c, src/arguments.h,